--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,20 +10,20 @@
     {
       "src": "B4mart.png",
       "sizes": "192x192",
-      "type": "image/svg+xml"
+      "type": "image/png"
     },
     {
       "src": "B4mart.png",
       "sizes": "512x512",
-      "type": "image/svg+xml"
+      "type": "image/png"
     },
     {
-      "src": "icons/vite-192x192.png",
+      "src": "B4mart.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icons/vite-512x512.png",
+      "src": "B4mart.png",
       "sizes": "512x512",
       "type": "image/png"
     }
